[package]
name = "parse_tsconfig"
version = "0.1.0"
authors = ["Daniel Rivas <daniel.rivas@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
json_comments = "0.2.0"
