[package]
name = "tsconfig"
description = "Parse .tsconfig configuration files for TypeScript"
version = "0.1.0"
authors = ["Daniel Rivas <daniel.rivas@hey.com>"]
edition = "2018"
homepage = "https://github.com/drivasperez/tsconfig"
repository = "https://github.com/drivasperez/tsconfig"
license = "MIT"
keywords = ["typescript", "tsconfig", "configuration", "config"]
categories = ["config"]
readme = "README.md"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
json_comments = "0.2.0"
regex = "1.4.5"
thiserror = "1.0.24"
